# NoMeter

./: .gitignore  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  ROADMAP.md  SECURITY.md  index.html  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: nometer-release-review.md
.github/workflows/: ci.yml
docs/: first-release-checklist.md  first-run.md  installer-packaging.md  native-engines.md  release-dry-run-evidence.md  release-readiness.md  windows-trust.md
docs/proof/: nometer-folder-e2e.html
scripts/: ci-maintenance-check.mjs  desktop-ui-smoke.mjs  first-release-check.mjs  guided-flow-check.mjs  license-positioning-check.mjs  native-doctor.mjs  ocr-preflight.mjs  public-safety-check.mjs  release-checksums.mjs  release-evidence-cleanup.mjs  release-evidence-index.mjs  release-evidence-run.mjs  release-evidence.mjs  release-installers.mjs  release-notes.mjs  release-portable.mjs  release-prepare.mjs  release-provenance.mjs  release-review-check.mjs  release-smoke.mjs  release-verify-download.mjs  relocate-tauri-cache.mjs  sync-ffmpeg-sidecars.mjs  sync-pandoc-sidecars.mjs  sync-qpdf-sidecars.mjs  with-d-toolchain.mjs
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/lib/: converters.ts  jobs.test.ts  jobs.ts  nativeEngines.ts  nativeFolders.test.ts  nativeFolders.ts
