[package]
name = "openforge"
version = "0.2.0"
description = "Local-first file conversion and PDF toolbox"
authors = ["OpenForge contributors"]
edition = "2021"
license = "AGPL-3.0-only"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
